# dna-messenger

./: .gitignore  .gitlab-ci-imgui.yml  .gitlab-ci.yml  .gitlab-ci.yml.bak  .security_audit_plan.md  APK_API_USAGE_GUIDE.md  ARCHIVE_MIGRATION_SUMMARY.txt  BUGS.md  CHANGELOG.md  CHANGELOG_2025-11-14.md  CHANGELOG_2025-11-15.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  COMPREHENSIVE_SECURITY_AUDIT_2025-11-18.md  CROSS-COMPILE-SUMMARY.md  CROSS-COMPILE.md  C_API_BUILD_SUCCESS.md  DEVLOG.md  DHT_CONTEXT_SPLIT_PLAN.md  DNA_API_INTEGRATION_SPEC.md  DNA_API_QUICK_REFERENCE.md  EXPLORATION_INDEX.md  GDB_INTEGRATION_SPEC.md  GITLAB-CI-SETUP.md  GUI-FINAL-STATUS.md  GUI-ICON-FIX-SUMMARY.md  GUI-MVP-TUNING-COMPLETE.md  IMAGE-SUPPORT-COMPLETE.md  IMAGE-SUPPORT-PLAN.md  IMGUI_MISSING_FEATURES.md  KEYSERVER-HTTP-API-DESIGN.md  KOTLIN_API_CLIENTS_COMPLETE.md  LOGGING_API_IMPLEMENTATION.md  MISSING_FEATURES.md  MODULARIZATION_STATUS.md  Makefile  NATIVE-TITLEBAR-FULLSCREEN.md  NETWORK_RELAY_OPTIONS.md  PLAN_DM_DAILY_BUCKET.md  (+98 more)
archive/keyserver/: CMakeLists.txt
archive/utils/: CMakeLists.txt  export_pubkey  verify_json
archive/wallet-gui/: CMakeLists.txt  SendTokensDialog.cpp  SendTokensDialog.h  TransactionHistoryWidget.h  WalletMainWindow.cpp  WalletMainWindow.h  cpunk_themes.h  main_wallet.cpp
bootstrap/: CMakeLists.txt  README.md
bootstrap/core/: bootstrap_main.c
bootstrap/deployment/: monitor-bootstrap.sh  verify-deployment.sh
bootstrap/extensions/: README.md
cli/: CMakeLists.txt  cli_commands.c  cli_commands.h  main.c
crypto/cellframe_dilithium/: CMakeLists.txt  Makefile  cellframe_dilithium_api.c  cellframe_dilithium_api.h  cmake_install.cmake  dap_crypto_common.h  dap_hash.h  dap_stubs.c  dilithium_params.h  dilithium_poly.h  dilithium_sign.c  dna_compat.c  dna_crypto_common.h  dna_hash.h  fips202.h
crypto/dsa/: CMakeLists.txt  Makefile  api.h  cmake_install.cmake  config.h  randombytes.h  sign.c  sign.h
dht/: CMakeLists.txt  MIGRATION_GUIDE.md  Makefile  clear_outbox.c  cmake_install.cmake  deploy-bootstrap.sh  deploy-fix.sh  deploy-vps.sh  dht_contactlist.c  dht_contactlist.h  dht_context.cpp  dht_context.h  dht_groups.c  dht_groups.h  dht_identity_backup.c  dht_identity_backup.h  dht_keyserver.c  dht_keyserver.h  dht_offline_queue.c  dht_offline_queue.h  dht_profile.c  dht_profile.h  dht_singleton.c  dht_singleton.h  dht_value_storage.cpp  dht_wall.h  dna-dht-bootstrap.service  dna_message_wall.c  dna_message_wall.h  dna_profile.c  dna_profile.h  gnutls_stubs_win.c  gnutls_win_shim.c  migrate_storage_once  migrate_storage_once.cpp  persistent_bootstrap  persistent_bootstrap.c  query_outbox.c  quick_lookup  quick_lookup.c  (+4 more)
dht/client/: bootstrap_cache.c  bootstrap_cache.h  dht_addressbook.c  dht_addressbook.h  dht_bootstrap_discovery.c  dht_bootstrap_discovery.h  dht_contactlist.c  dht_contactlist.h  dht_geks.c  dht_geks.h  dht_grouplist.c  dht_grouplist.h  dht_identity.cpp  dht_identity.h  dht_identity_backup.c  dht_identity_backup.h  dht_message_backup.c  dht_message_backup.h  dht_singleton.c  dht_singleton.h  dht_wall.h  dna_feed.h  dna_feed_channels.c  dna_feed_comments.c  dna_feed_index.c  dna_feed_posts.c  dna_feed_topic.c  dna_feed_votes.c  dna_group_outbox.c  dna_group_outbox.h  dna_message_wall.c  dna_message_wall.h  dna_profile.c  dna_profile.h  dna_wall_votes.c  dna_wall_votes.h
dht/core/: dht_bootstrap_registry.c  dht_bootstrap_registry.h  dht_context.cpp  dht_context.cpp.backup  dht_context.h  dht_errors.h  dht_keyserver.c  dht_keyserver.h  dht_listen.cpp  dht_listen.h  dht_stats.cpp  dht_stats.h
dht/keyserver/: keyserver_addresses.c  keyserver_core.h  keyserver_helpers.c  keyserver_lookup.c  keyserver_names.c  keyserver_profiles.c  keyserver_publish.c
dht/shared/: dht_chunked.c  dht_chunked.h  dht_contact_request.c  dht_contact_request.h  dht_dm_outbox.c  dht_dm_outbox.h  dht_feed_subscriptions.c  dht_groups.c  (+16 more)
gui/: CMakeLists.txt  CreateIdentityDialog.cpp  CreateIdentityDialog.h  IdentitySelectionDialog.cpp  IdentitySelectionDialog.h  MainWindow.cpp  MainWindow.h  Makefile  MessageWallDialog.cpp  MigrateIdentityDialog.cpp  MigrateIdentityDialog.h  ProfileEditorDialog.cpp  RegisterDNANameDialog.cpp  RegisterDNANameDialog.h  RestoreIdentityDialog.cpp  RestoreIdentityDialog.h  SeedPhraseWidget.cpp  SeedPhraseWidget.h  SendTokensDialog.cpp  SendTokensDialog.h  ThemeManager.h  TransactionHistoryDialog.cpp  TransactionHistoryDialog.h  WalletDialog.cpp  WalletDialog.h  cmake_install.cmake  main.cpp  resources.qrc
imgui_gui/: BUILD_VERIFICATION.md  CMakeLists.txt  CODING_GUIDELINES.md  IconsFontAwesome6.h  Makefile  REFACTORING_COMPLETE.md  app.cpp  app.cpp.backup  app.h  app.h.backup  app_old.h  async_task.h  async_task_queue.h  cmake_install.cmake  dna_messenger.ini  font_awesome.cpp  main.cpp  modal_helper.h  settings_manager.cpp  settings_manager.h  test_dna_profile  test_identity_backup  test_simple  texture_manager.cpp  theme_colors.h  ui_helpers.cpp  ui_helpers.h
jni/: CMakeLists.txt  dna_jni.c
keyserver/: CMakeLists.txt  README.md
p2p/: CMakeLists.txt  Makefile  build.sh  p2p_transport.c  p2p_transport.c.backup  p2p_transport.h  test_p2p_basic.c
tests/: CMakeLists.txt  test_aes256_gcm.c  test_bip39_bip32.c  test_check_persistence.c  test_dht_listen.c  test_dht_network_stress.c  test_dht_offline_performance.c  test_dilithium5_signature.c  test_dna_profile.c  test_get_version.c  test_group_messaging.c  test_gsk.c  test_gsk_simple.c  test_ice_lookup.c  test_identity_backup.c  test_key_encryption.c  test_kyber1024.c  test_lookup.c  test_offline_queue_bug.c  test_pq_dht_bootstrap.c  test_pq_encrypted_put.c  test_pq_node_identity.c  test_pq_put_get.c  test_signed_put.c  test_simple.c  test_stun_connectivity.sh  test_timestamp_v08.c  test_value_persistence.c  test_value_retrieval.c  test_version_replace.c
transport/: CMakeLists.txt  transport.c  transport.h
wallet-gui/: CMakeLists.txt  SendTokensDialog.cpp  SendTokensDialog.h  TransactionHistoryWidget.cpp  TransactionHistoryWidget.h  WalletMainWindow.cpp  cpunk_themes.h  main_wallet.cpp
(+762 files in other folders)
